--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,24 +3,22 @@ agp = "8.6.1"
 kotlin = "1.9.0"
 jetbrainsKotlinJvm = "1.9.0"
 
-activity-compose = "1.7.0"
-androidx-junit = "1.1.5"
-coil = "2.3.0"
-core-ktx = "1.9.0"
-datetime = "0.9.0"
-desugar_jdk_libs = "2.0.4"
-espresso-core = "3.5.0"
+activity-compose = "1.9.2"
+androidx-junit = "1.2.1"
+coil = "2.4.0"
+core-ktx = "1.13.1"
+espresso-core = "3.6.1"
 junit = "4.13.2"
 koin-androidx-compose = "3.4.0"
-kotlinx-coroutines-test = "1.4.2"
-kotlinxCoroutinesCore = "1.7.1"
-lifecycle-runtime-ktx = "2.6.1"
-material = "1.3.1"
+kotlinx-coroutines-test = "1.7.3"
+kotlinxCoroutinesCore = "1.7.3"
+lifecycle-runtime-ktx = "2.8.6"
+material = "1.7.2"
 mockk = "1.13.11"
-navigation-compose = "2.7.7"
-compose-ui = "1.4.0"
-ui-test-manifest = "1.3.1"
-kotlin-bom = "1.8.0"
+navigation-compose = "2.8.1"
+compose-ui = "1.7.2"
+ui-test-manifest = "1.7.2"
+kotlin-bom = "1.8.10"
 
 
 [libraries]
@@ -30,6 +28,7 @@ androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", vers
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
+androidx-icon-material = {group ="androidx.compose.material", name ="material-icons-extended", version.ref = "material"}
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 androidx-ui = { module = "androidx.compose.ui:ui", version.ref = "compose-ui" }
 androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "ui-test-manifest" }
@@ -38,8 +37,6 @@ androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref =
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-ui" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
-datetime = { module = "io.github.vanpra.compose-material-dialogs:datetime", version.ref = "datetime" }
-desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 junit = { module = "junit:junit", version.ref = "junit" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin-androidx-compose" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin-androidx-compose" }
